# COGLAINI-B

./: CMakeLists.txt  README  coglaini-b README.txt  coglaini-b.kdev4
CMake/Modules/: FindNite.cmake  FindOpenNI.cmake
resources/: CMakeLists.txt
resources/Engine1-Data/: CMakeLists.txt  IKRob1.dae  IKRob2.dae
resources/GT3-Session4-Data/: CMakeLists.txt  test11_3Anim.dae  testMan14.dae
resources/Images/: CMakeLists.txt
resources/KinectData/: CMakeLists.txt
resources/Models/: CMakeLists.txt
resources/Shader/: CMakeLists.txt  axis.frag  axis.vert  cube.frag  minimal.frag  minimal.vert  one.frag  one.vert  physics.frag  physics.vert  pointLight.frag  pointLight.vert  square.frag
resources/Sounds/: CMakeLists.txt
resources/Sounds/album/: CMakeLists.txt  License.txt
resources/Test-DAE/: CMakeLists.txt  camera4.dae  cube.cam.blend  cube.cam.dae  minimal.blend  minimal.dae
resources/Textures/: CMakeLists.txt
source/: CMakeLists.txt  GLDebugDrawer.cpp  GLDebugDrawer.h  GLDebugFont.cpp  GLDebugFont.h  GL_ShapeDrawer.cpp  GL_ShapeDrawer.h  SFML_OpenGL.cpp  SFML_OpenGL.h  aiToGLM.cpp  canimatedmesh.cpp  canimatedmesh.h  canimator.cpp  canimator.h  caxis.cpp  caxis.h  cbasemesh.cpp  cbasemesh.h  cbasemeshinstance.cpp  cbasemeshinstance.h  ccamera.cpp  ccamera.h  ccube.cpp  ccube.h  centity.cpp  centity.h  centitylight.cpp  centitylight.h  centitymanager.cpp  centitymanager.h  cfragmentshader.cpp  cfragmentshader.h  cgame.cpp  cgame.h  cgeometryshader.cpp  cgeometryshader.h  ckeyboardmouseinput.cpp  ckeyboardmouseinput.h  clogerrorstream.cpp  clogerrorstream.h  (+24 more)
source/OldStuff/: ccubeogl2.cpp  ccubeogl2.h  ccubeogl3.cpp  ccubeogl3.h  clight.cpp  clight.h  csquareogl3.cpp  csquareogl3.h  idrawableobject.cpp  idrawableobject.h  idrawableobjectogl3.cpp  idrawableobjectogl3.h  svertexdata.cpp  svertexdata.h
source/headers_with_gcc_warnings/: CMakeLists.txt  aiCamera.h  aiMesh.h  aiScene.h  assimp.h  btBulletDynamicsCommon.h  glm.hpp  quaternion.hpp  type_ptr.hpp
source/samples/: CMakeLists.txt  assimp-sfml-sample.cpp  bullet-basic-sample.cpp  camera.cpp  camera.h  glm-sample.cpp  kbhit.h  nite-openni-sample.cpp  nite-trackpad-sample.cpp  openni-sample.cpp  sfml-sample.cpp  signal_catch.h
