#---------------------
#- Project for GT3@HTW
#---------------------

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( COGLAINI-B C CXX)


SET( CPACK_SOURCE_STRIP_FILES  TRUE )

SET( CPACK_PACKAGE_VERSION_MAJOR 0 )
SET( CPACK_PACKAGE_VERSION_MINOR 0 )
SET( CPACK_PACKAGE_VERSION_PATCH 1 )
SET( CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}-${CPACK_PACKAGE_VERSION_MINOR}-${CPACK_PACKAGE_VERSION_PATCH}" )

SET( CPACK_PACKAGE_FILE_NAME "COGLAINI-B-${CPACK_PACKAGE_VERSION}" )
SET( CPACK_PACKAGE_INSTALL_DIRECTORY "COGLAINI-B-${CPACK_PACKAGE_VERSION}" )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "Package of project: COGLAINI-B" )
SET( CPACK_PACKAGE_VENDOR "BellersenM@googlemail.com" )
SET( CPACK_GENERATOR "TBZ2" )

SET( CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Modules/")

ADD_SUBDIRECTORY( source )
ADD_SUBDIRECTORY( resources )

INCLUDE( InstallRequiredSystemLibraries )
INCLUDE( CPack )