IF( NOT ( ${CMAKE_BINARY_DIR} STREQUAL ${CMAKE_SOURCE_DIR}))
	FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.txt )
	foreach( myFile  ${thisDir})
		CONFIGURE_FILE( ${myFile} ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
	endforeach()
ENDIF()

FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.txt )
foreach( myFile  ${thisDir})
	INSTALL( FILES ${myFile} DESTINATION resources/Sounds/album/)
endforeach()

IF( NOT ( ${CMAKE_BINARY_DIR} STREQUAL ${CMAKE_SOURCE_DIR}))
	FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.jpg )
	foreach( myFile  ${thisDir})
		CONFIGURE_FILE( ${myFile} ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
	endforeach()
ENDIF()

FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.jpg )
foreach( myFile  ${thisDir})
	INSTALL( FILES ${myFile} DESTINATION resources/Sounds/album/)
endforeach()

IF( NOT ( ${CMAKE_BINARY_DIR} STREQUAL ${CMAKE_SOURCE_DIR}))
	FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.ogg )
	foreach( myFile  ${thisDir})
		CONFIGURE_FILE( ${myFile} ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
	endforeach()
ENDIF()

FILE( GLOB thisDir RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" *.ogg )
foreach( myFile  ${thisDir})
	INSTALL( FILES ${myFile} DESTINATION resources/Sounds/album)
endforeach()